--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "configstore": "^3.1.1",
     "figlet": "^1.2.0",
     "global": "^4.3.2",
-    "inquirer": "^5.1.0"
+    "inquirer": "^5.1.0",
+    "touch": "^3.1.0"
   }
 }
