--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "global": "^4.3.2",
     "inquirer": "^5.1.0",
     "touch": "^3.1.0"
+  },
+  "publishConfig": {
+    "registry": "http://localhost:8081/repository/test-npm-private/"
   }
 }
